<resources>
    <string name="app_name">MealMate</string>
    <string name="splash_subtitle">From inspiration to plate</string>
    <string name="hello_blank_fragment">Test blank fragment</string>
    <string name="welcome">Welcome! 👋</string>
    <string name="login_subtitle">Login to continue planning your meals</string>
    <string name="email">Email</string>
    <string name="emailHint">name@example.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Don\'t have account?</string>
    <string name="have_acc">Have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="guest">Continue as Guest</string>
    <string name="create_acc">Create Account</string>
    <string name="sign_up_subtitle">Join us and start planning your meals</string>
    <string name="name">Full Name</string>
    <string name="name_hint">Thaowpsta Saiid</string>
    <string name="default_web_client_id">1059358869778-h94k0abgf8028pqpga0bvsnuv1dmep0o.apps.googleusercontent.com</string>
    <string name="facebook_app_id">772485545295397</string>
    <string name="facebook_client_token">83871079694584cb3b86b30f5ec873a9</string>
    <string name="fb_login_protocol_scheme">fb772485545295397</string>
    <string name="home">Home</string>
    <string name="planner">Plans</string>
    <string name="search">Search</string>
    <string name="favs">Favorites</string>
    <string name="date_txt">Monday, Oct. 24</string>
    <string name="greeting">Good Morning,</string>
    <string name="username">Username</string>
    <string name="meal_title">Spaghetti Carbonara</string>
    <string name="area">Area</string>
    <string name="category">Category</string>
    <string name="cook_now">Cook Now</string>
    <string name="cook_later">Cook Later</string>
    <string name="loading">Loading...</string>
    <string name="ingredients">Ingredients</string>
    <string name="item_num">0 items</string>
    <string name="instructions">Instructions</string>
    <string name="video_tutorial">Video Tutorial</string>
    <string name="add_to_plan">Add to plan</string>
    <string name="q_cat">Quick Categories</string>
    <string name="see_all">See all</string>
    <string name="countries">Countries</string>
    <string name="today_plan">Today\'s Plan</string>
    <string name="new_recipe">Explore New Recipes</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="categories_subtitle">Browse meals by category</string>
    <string name="mix_the_flour">Mix the flour...</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="favs_subtitle">Saved recipes</string>
    <string name="weekly_plans">Weekly Plans</string>
    <string name="plans_subtitle">Your meals for this week</string>
    <string name="back">Back</string>
    <string name="profile_img">Profile Img</string>
    <string name="logout">Logout</string>
    <string name="mod">Meal of day</string>
    <string name="refresh">Refresh</string>
    <string name="count_num">0</string>
    <string name="google_login">Sign in with Google</string>
    <string name="facebook_login">Sign in with Facebook</string>
    <string name="x_login">Sign in with X</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="add_meal">Add Lunch</string>
    <string name="quick_add">Find a recipe or quick add</string>
    <string name="meals_num">0 Meals</string>
    <string name="plan_next_day">Tap to plan Wednesday</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="measure">Measure</string>
    <string name="instruction_num">1</string>
    <string name="meal_type">BREAKFAST</string>
    <string name="planed_desc">350 kcal • High Protein</string>
    <string name="meal_category">Meal Category</string>
    <string name="current_date">12</string>
    <string name="current_day">Mon</string>
    <string name="select_date">Select Date</string>
    <string name="october_2025">October 2025</string>
    <string name="select">Select</string>
    <string name="select_meal_type">Select meal type</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="add_to_meal_type">Add to %s</string>
    <string name="select_meal">Please select a meal type</string>
    <string name="success_added_to_plan">Success! Meal added to your plan.</string>
    <string name="failed_to_add_plan_s">Failed to add plan: %s</string>
    <string name="facebook_login_cancelled">Facebook Login Cancelled</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">"Login Failed: "</string>
    <string name="sign_up_successful_please_login">Sign up successful! Please login.</string>
    <string name="sign_up_failed">"Sign up failed: "</string>
    <string name="no_meal_loaded">No meal loaded.</string>
    <string name="please_select_a_date">Please select a date</string>
    <string name="d_item">%d item</string>
    <string name="cannot_go_back_past_today">Cannot go back past today</string>
    <string name="cannot_go_past_this_week">Cannot go past this week</string>
    <string name="_1_meal">1 Meal</string>
    <string name="meals">" Meals"</string>
    <string name="browse_meals_by_s">Browse meals by %s</string>
    <string name="find">Find your next meal to plan</string>
    <string name="search_by_name">Search by Name</string>
    <string name="search_by_category">Search by Category</string>
    <string name="search_by_area">Search by Area</string>
    <string name="search_by_ingredient">Search by Ingredient</string>
    <string name="find_by_s">Find by %s</string>
    <string name="ingredient">Ingredient</string>
    <string name="change_password">Change Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="switch_to_arabic">Switch to Arabic language</string>
    <string name="save">Save Changes</string>
    <string name="add_0">Add {0}</string>
    <string name="Name">Name</string>
    <string name="planned_for_s">Planned for %s</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="you_need_to_login_to_use_this_feature">You need to login to use this feature.</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="internet_required">You need an internet connection to perform this action.</string>
</resources>