<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_margin_16"
    app:cardCornerRadius="@dimen/padding_margin_16"
    app:cardElevation="@dimen/padding_margin_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_margin_16">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/fredoka_bold"
            android:text="@string/select_meal_type"
            android:textColor="@color/txt_dark"
            android:textSize="@dimen/txt_size_19" />

        <TextView
            android:id="@+id/tv_selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_margin_8"
            android:text="@string/date_txt"
            android:textColor="@color/txt_light" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_meal_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/padding_margin_16"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_breakfast"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakfast"
                android:textColor="@color/txt_dark"
                app:chipBackgroundColor="@color/stroke_txt_field" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_lunch"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunch"
                android:textColor="@color/txt_dark"
                app:chipBackgroundColor="@color/stroke_txt_field" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_dinner"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dinner"
                android:textColor="@color/txt_dark"
                app:chipBackgroundColor="@color/stroke_txt_field" />

        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_to_plan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/txt_field_h"
            android:layout_marginTop="@dimen/padding_margin_16"
            android:background="@drawable/primary_button_filled"
            android:text="@string/add_to_plan"
            android:textAllCaps="false"
            android:textColor="@color/splash_subtitle_color"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>